base/hummingbird-jiangok/neutrino.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neutrino
  namespace: hummingbird-jiangok
spec:
  selector:
    matchLabels:
      app: neutrino
  replicas: 1
  template:
    metadata:
      labels:
        app: neutrino
    spec:
      hostNetwork: true
      imagePullSecrets:
        - name: image-pull-secret
      containers:
        - name: neutrino
          image: lianjiang549/neutrino:0.1
          ports:
            - containerPort: 3629
          volumeMounts:
            - name: ws
              mountPath: /ws
            - name: spool
              mountPath: /spool
          command: ["/dist/neutrino-linux-x64"]
          args: ["-start", "/ws/neutrino.json"]
          volumes:
            - name: ws
              hostPath:
                path: /private/tmp
            - name: spool
              hostPath:
                path: /private/tmp/spool
