base/hummingbird-jiangok/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hummingbird-ingress
  namespace: hummingbird-jiangok
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: neutrino
                port:
                  number: 80
